part2/vagrant_apps/app1.yaml
#app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: registry.k8s/io/echoserver:1.10
          args:
            - "-text=Hello from App1"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - protocol:
      port: 80
      targetPort: 8080
