part2/vagrant_apps/app3.yaml
#app-three.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: registry.k8s/io/echoserver:1.10
          args:
            - "-text=Hello from App3"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
